# pickpack

./: LICENSE  Makefile  README-dev.md  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: basic-tree.py  basic.py  custom-tree.py  custom.py  options_map_func-tree.py  options_map_func.py  scroll-tree.py  scroll.py
src/pick/: anytree_utils.py  treepicker.py
src/pickpack/: __init__.py  anytree_utils.py
src/tree_pick/: __init__.py  anytree_utils.py
tests/: test_pickpack.py  test_tree_pick.py
