[tool.poetry]
name = "tree_pick"
version = "1.0.0"
description = "Based on wong2's pick, tree_pick is a terminal GUI which allows you to pick one or more options from a tree structure"
authors = ["Ana <anafvana@gmail.com>", "wong2 <wonderfuly@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/anafvana/tree_pick"
homepage = "https://github.com/anafvana/tree_pick"
keywords = ["terminal", "gui", "pick", "tree"]

[tool.poetry.dependencies]
python = ">=3.9"
windows-curses = {version = "^2.2.0", platform = "win32"}
dataclasses = { version = "^0.8", python = "~3.6" }
anytree = {version = "^2.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
