[tool.poetry]
name = "pickpack"
version = "2.0.0"
description = "Based on wong2's pick, pickpack is a terminal GUI which allows you to pick one or more options from a tree structure"
authors = ["Ana <anafvana@gmail.com>", "wong2 <wonderfuly@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/anafvana/pickpack"
homepage = "https://github.com/anafvana/pickpack"
keywords = ["terminal", "gui", "pick", "tree"]

[tool.poetry.dependencies]
python = ">=3.9"
windows-curses = { version = "^2.2.0", platform = "win32" }
dataclasses = { version = "^0.8", python = "~3.6" }
anytree = { version = "^2.8" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
